# SandHeapModel

./: CMakeLists.txt  README.md  main.cpp
dispersion/: dispersion.cpp  dispersion.h
field/: field.cpp  field.h  makeField.cpp  makeField.h
parsingArgs/: args.h  parsingArgs.cpp
picture/: picture.cpp  picture.h
